fix(top_scoreboard): third team isn't visible on desert_octet map
Fixes #39.

--- a/content/panorama/styles/custom_game/multiteam_top_scoreboard.css
+++ b/content/panorama/styles/custom_game/multiteam_top_scoreboard.css
@@ -20,6 +20,32 @@
 	margin-left: 225px;
 }
 
+.IsLargeGame #HeroIcon
+{
+	width: 56px;
+}
+
+.AspectRatio4x3 .IsLargeGame #HeroIcon
+{
+	width: 43px;
+}
+
+.IsLargeGame .ScoreboardTeamWrapper
+{
+	border-left-width: 1px;
+	border-right-width: 1px;
+}
+
+.IsLargeGame #TopBarScoreboard
+{
+	margin-left: 150px;
+}
+
+.AspectRatio4x3 .IsLargeGame #TopBarScoreboard
+{
+	margin-left: 135px;
+}
+
 #ScoreboardContainer
 {
     flow-children: right;
